--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 Dec 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 6299188694</span></li>
+                  <!--<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 Dec 2000</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 6299188694</span></li>-->
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bangalore, India</span></li>
                 </ul>
               </div>
@@ -218,7 +218,7 @@
               <h4>B.E. in Computer Science and Engineering</h4>
               <h5>2020 - 2024</h5>
               <p><em>Jss Academy Of Technical Education</em></p>
-              <p>December 2020-March 2023 :CGPA=9.02</p>
+              <p>December 2020-April 2023 :CGPA=9.02</p>
             </div>
 
             <h3 class="resume-title">Projects</h3>
@@ -252,8 +252,8 @@
               <ul>
                 <li>Lead in the design, development, and implementation of the website.</li>
                 <li>Developing and maintaining the website, collaborating with other developers to identify project requirements.</li>
-                <li></li>
-                <li></li>
+                <!--<li></li>
+                <li></li>-->
               </ul>
             </div>
             
@@ -263,14 +263,14 @@
                  <h4>CSS Certificate</h4>
                  <h5>Issued on: Feb 2023</h5>
                   <p>Issued by: HackerRank</p>
-                   <p>Link: <a href="https://www.hackerrank.com/certificates/4482819534a1" target="_blank" rel="noopener">https://www.hackerrank.com/certificates/4482819534a1</a></p>
+                   <p>Link: <a href="https://www.hackerrank.com/certificates/4482819534a1" target="_blank" rel="noopener">certificate</a></p>
               </div>
 
             <div class="resume-item">
               <h4>Python Certificate</h4>
               <h5>Issued on: Oct 2022</h5>
               <p>Issued by: Google</p>
-              <p>Link: <a href="https://www.kaggle.com/learn/certification/mvarsha7007/python" target="_blank" rel="noopener">https://www.kaggle.com/learn/certification/mvarsha7007/python</a></p>
+              <p>Link: <a href="https://www.kaggle.com/learn/certification/mvarsha7007/python" target="_blank" rel="noopener">certificate</a></p>
             </div>
 
             <div class="resume-item">
