--- a/index.html
+++ b/index.html
@@ -298,6 +298,12 @@
               <img src="assets/img/certificate.jpg" alt="" width="70%">
             </div>
 
+            <div class="resume-item">
+              <h4>Introduction to Web Development with HTML5, CSS3, and JavaScript</h4>
+              <h5>Issued on: May 2023</h5>
+              <p>Issued by: IBM</p>
+              <p>Link: <a href="https://courses.edx.org/certificates/36afc6a289644312a11ad68778daa00a" target="_blank" rel="noopener">certificate</a></p>
+            </div>
 
 
           </div>
@@ -339,6 +345,21 @@
               </div>
             </div>
           </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/test3.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                
+                <a href="portfolio-details3.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
+
+
 
         </div>
 
