--- a/index.html
+++ b/index.html
@@ -249,6 +249,16 @@
               <p>This is a simple To-Do List website created using HTML, CSS, and JavaScript. The website allows users to create 
                 a list of tasks that they need to complete and mark them as done once they have completed them.</p>
             </div>
+
+            <div class="resume-item">
+              <h4>Magical Mischief: A Harry Potter Adventure App</h4>
+              <h5>Java</h5>
+              <p>“Magical Mischief: A Harry Potter Adventure” is an interactive Android application that offers a fun and engaging experience 
+                for fans of the Harry Potter series.The app includes a variety of quizzes that challenge users' knowledge of the Harry Potter universe.In 
+                addition to the quizzes, the app also offers a wide range of merchandise options, including clothing, accessories, and collectibles,
+                allowing users to express their love for the series in a tangible way. With Magical Mischief: A Harry Potter Adventure, users can 
+                immerse themselves in the wizarding world and experience the magic of Harry Potter wherever they go.</p>
+            </div>
             
 
           </div>
@@ -282,6 +292,13 @@
                  <h5>Issued on: Feb 2023</h5>
                   <p>Issued by: HackerRank</p>
                    <p>Link: <a href="https://www.hackerrank.com/certificates/4482819534a1" target="_blank" rel="noopener">certificate</a></p>
+              </div>
+
+            <div class="resume-item">
+                 <h4>Java Certificate</h4>
+                 <h5>Issued on: Aug 2023</h5>
+                  <p>Issued by: HackerRank</p>
+                   <p>Link: <a href="https://www.hackerrank.com/certificates/b0a1efd66f92">certificate</a></p>
               </div>
 
             <div class="resume-item">
