--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Flask <i class="val">60%</i></span>
+              <span class="skill">Flask <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -181,9 +181,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python<i class="val">60%</i></span>
+              <span class="skill">Python<i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -280,7 +280,7 @@
               <ul>
                 <li>Spearheaded the end-to-end development of a dynamic Turf Booking website using <strong>HTML, CSS, and JavaScript</strong>, optimizing the user 
                   experience and enhancing site functionality.</li>
-                <li>Crafted a responsive and visually engaging user interface (UI) ensuring seamless interaction across various devices, browsers, and screen
+                <li>Crafted a <strong>responsive and visually engaging user interface (UI)</strong> ensuring seamless interaction across various devices, browsers, and screen
                   sizes.Collaborated closely with a cross-functional team to gather requirements, conduct user testing, and deliver a high-quality product
                   on time and within budget.</li>
                 <li>Regularly maintained and updated the website to ensure optimal functionality and performance.</li>
