--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mvarsha11122000@gmail.com</span></li>
                 </ul>
@@ -267,6 +267,13 @@
                 addition to the quizzes, the app also offers a wide range of merchandise options, including clothing, accessories, and collectibles,
                 allowing users to express their love for the series in a tangible way. With Magical Mischief: A Harry Potter Adventure, users can 
                 immerse themselves in the wizarding world and experience the magic of Harry Potter wherever they go.</p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Online Code Editor</h4>
+              <h5>React JS , Material UI</h5>
+              <p>It is an online code editor, where developers can create code snippets and test them.It can be used for testing and 
+                showcasing user-created HTML, CSS and JavaScript code snippets.</p>
             </div>
             
 
