--- a/index.html
+++ b/index.html
@@ -416,6 +416,17 @@ scenarios, surpassing project objectives.</li>
           </div>
 
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/code_editor.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                
+                <a href="portfolio-details5.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
 
 
 
