--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ scenarios, surpassing project objectives.</li>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/getstarted.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/getstarted.jpeg" class="img-fluid" alt="" style="width: 100%; height: auto;">
               <div class="portfolio-links">
                 
                 <a href="portfolio-details4.html" title="More Details"><i class="bx bx-link"></i></a>
