--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ scenarios, surpassing project objectives.</li>
           </div>
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web mb-0">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/getstarted.jpeg" class="img-fluid" alt="" style="width: 100%; height: auto;">
               <div class="portfolio-links">
